tests/error/tested.default
build:
run: ./build/$BUILD/bin/rodac % --messages=minimal

buildtime: < 1s
time: < 1s
exit: != 0
stderr: !=
